vk-airplay-chrome/css/content.css
.audio span.airplay-button {
    display: block;
    position: absolute;
    z-index: 100;
    left: -8px;
    top: 6px;
    bottom: 6px;
    width: 5px;
    cursor: pointer;
    background-image: none;
    background-color: #216baa;
}

.audio.starting span.airplay-button {
    background-color: #fffaa5;
}

.audio.being-played span.airplay-button {
    background-color: #ffa714;
}

.audio div.airplay-progress {
    display: none;
    position: absolute;
    right: 0;
    top: 0;
    bottom: 0;
    color: white;
    background-color: #6590aa;
    padding: 10px 5px 0 5px;
    text-align: right;
}

.audio.being-played div.airplay-progress {
    display: block;
}

